<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_background"
    tools:context="com.realfit1.ProfileActivity">


    <LinearLayout
        android:id="@+id/userPicLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">
        <ImageView
            android:id="@+id/ProfileImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/profile_pic"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/userContentLayout"
            tools:ignore="ContentDescription"/>

    </LinearLayout>



     <LinearLayout
        android:id="@+id/userContentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_save"
        android:layout_marginBottom="25dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="175dp">

        <LinearLayout
            android:id="@+id/userGenderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_prompt"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/sp1_gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_gravity="center_horizontal"
                android:layout_marginStart="100dp"
                android:entries="@array/gender_array"
                android:gravity="center"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:background="#c0c0c0" />

        <LinearLayout
            android:id="@+id/AgeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/age"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginRight="25dp"
                android:layout_weight="0.67"
                android:inputType="number"
                android:text="21"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:background="#c0c0c0" />

        <LinearLayout
            android:id="@+id/WeightLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/weight"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_weight"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="50dp"
                android:inputType="number"
                android:text="60"/>

            <Spinner
                android:id="@+id/sp1_wunit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-40dp"
                android:entries="@array/weight_array"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:background="#c0c0c0" />

        <LinearLayout
            android:id="@+id/HeightLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/tv_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/height"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_height"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="50dp"
                android:inputType="number"
                android:text="175"/>

            <TextView
                android:id="@+id/tv_height1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-40dp"
                android:text="CM"
                android:paddingLeft="10dp"
                android:textStyle="bold"/>


        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:background="#c0c0c0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_bmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/bmi"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_intbmi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="250dp"
                android:text="21.2"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>
         <info.hoang8f.widget.FButton
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:layout_gravity="bottom"
            android:text="@string/save"
            android:textColor="@color/white"
            app:buttonColor="@color/fbutton_color_midnight_blue"
            app:cornerRadius="4dp"
            app:shadowColor="@color/blue_light"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/userContentLayout"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

</RelativeLayout>

